--- a/.gitignore
+++ b/.gitignore
@@ -36,4 +36,6 @@ out/
 ### VS Code ###
 .vscode/
 
-application.properties
+# Ignore application properties
+src/main/resources/application.properties
+
